# document-generator-ai-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  opencode.json  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: pdf_tools.mdc
.cursor/skills/pdf_mcp/: SKILL.md
.github/workflows/: ci.yml
docs/: SETUP_CLAUDE.md
examples/: build_certificate.py  build_invoice.py  build_modern_report.py
mcp_server/: __init__.py  server.py
palettes/: academic_serif.json  corporate_slate.json  cyber_neon.json  forest_green.json  golden_luxury.json  legal_classic.json  midnight_dark.json  minimal_ink.json  nordic_ice.json  ocean_blue.json  rose_gold.json  royal_purple.json  sunset_warm.json  teal_modern.json  vibrant_startup.json  warm_cream.json  wine_deep.json
pdf_ai_tools/: __init__.py  palette.py  reader.py  session.py  styles.py  template.py  tools.py
templates/: contract.json  invoice.json  report.json
