[project]
name = "pdf-ai-tools"
version = "0.1.0"
description = "AI-powered PDF creation and reading toolkit (MCP server)"
requires-python = ">=3.11"
dependencies = [
    "reportlab>=4.2.0",
    "pypdf>=5.0.0",
    "Pillow>=10.0.0",
    "fastmcp>=2.0.0",
    "qrcode[pil]>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf_ai_tools"]

[dependency-groups]
dev = []

[project.scripts]
pdf-mcp = "mcp_server.server:main"
